apps/vaultwarden/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: vaultwarden
