apps/vaultwarden/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`vaultwarden.lampe.wtf`)
    kind: Rule
    services:
    - name: my-service
      port: 80
